Fixes issues sonar